compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funEquals.kt
fun bar() = foo()

fun foo() =<!SYNTAX!><!>
